--- a/src/style/index.css
+++ b/src/style/index.css
@@ -6,6 +6,43 @@
   background-color: gray;
 }
 
-body {
-  background-color: #f3c516;
+.fotoHome {
+  border-radius: 50%;
+  box-shadow: 2px 2px 10px rgba(0, 0, 0, 0.3);
+  background-image: url(../../public/GiulioAgnello.jpg);
+  background-size: cover;
+  background-position: center;
+  width: 400px;
+  height: 400px;
+}
+.fotoHome:hover {
+  transform: scale(1.05);
+  transition: transform 0.3s ease-in-out;
+}
+
+.descriptionHome {
+  width: 100%;
+  font-size: 1.2rem;
+  padding-top: 50px;
+}
+.descriptionHome p {
+  text-align: justify;
+  text-justify: inter-word;
+}
+.descriptionHome:hover {
+  transform: scale(1.02);
+  transition: transform 0.3s ease-in-out;
+  background-color: antiquewhite;
+  border-radius: 15px;
+  box-shadow: 2px 2px 10px rgba(0, 0, 0, 0.3);
+  padding: 10px;
+  transition: all 0.3s ease-in-out;
+}
+
+.liquid-ether-container {
+  position: relative;
+  overflow: hidden;
+  width: 100%;
+  height: 100%;
+  touch-action: none;
 }
