--- a/src/style/index.css
+++ b/src/style/index.css
@@ -1,3 +1,9 @@
+/* BASE CSS  */
+
+.body {
+  background-color: #060010;
+}
+
 .wrapperLay {
   height: 100vh;
   width: 100vh;
@@ -5,6 +11,8 @@
   backdrop-filter: blur(50%);
   background-color: gray;
 }
+
+/* LIQUIDETHER  */
 
 .fotoHome {
   border-radius: 50%;
@@ -28,15 +36,8 @@
 .descriptionHome p {
   text-align: justify;
   text-justify: inter-word;
-}
-.descriptionHome:hover {
-  transform: scale(1.02);
-  transition: transform 0.3s ease-in-out;
-  background-color: antiquewhite;
-  border-radius: 15px;
-  box-shadow: 2px 2px 10px rgba(0, 0, 0, 0.3);
-  padding: 10px;
-  transition: all 0.3s ease-in-out;
+  font-weight: bold;
+  font-size: 1.5rem;
 }
 
 .liquid-ether-container {
@@ -45,4 +46,21 @@
   width: 100%;
   height: 100%;
   touch-action: none;
+}
+
+/* NAVBAR */
+
+.navBar {
+  backdrop-filter: blur(10px);
+  background-color: rgba(255, 255, 255, 0.2);
+  border-radius: 30px;
+  box-shadow: 2px 2px 10px rgba(0, 0, 0, 0.3);
+  font-size: 1.5rem;
+}
+
+.navBar .nav-link:hover {
+  color: #8a2be2;
+  transition: color 0.3s ease-in-out;
+  font-weight: bold;
+  transform: scale(1.1);
 }
