--- a/src/style/index.css
+++ b/src/style/index.css
@@ -20,10 +20,11 @@ html {
 
 .fotoHome {
   border-radius: 50%;
-  box-shadow: 2px 2px 10px rgba(0, 0, 0, 0.3);
-  background-image: url(../../public/GiulioAgnello.jpg);
+
+  background-image: url(../../public/GiulioAgnello.png);
   background-size: cover;
   background-position: center;
+
   width: 400px;
   height: 400px;
 }
