--- a/src/style/index.css
+++ b/src/style/index.css
@@ -21,7 +21,7 @@ html {
 .fotoHome {
   border-radius: 50%;
 
-  background-image: url(../../public/GiulioAgnello.png);
+  background-image: url(../../public/GiulioAgnelloColor.png);
   background-size: cover;
   background-position: center;
 
