--- a/src/style/index.css
+++ b/src/style/index.css
@@ -19,14 +19,14 @@ html {
 /* LIQUIDETHER  */
 
 .fotoHome {
-  border-radius: 50%;
-
-  background-image: url(../../public/GiulioAgnelloColor.png);
+  background-image: url(../../public/Gemini_Generated_Image_iuey0wiuey0wiuey.png);
   background-size: cover;
   background-position: center;
-
-  width: 400px;
+  position: relative;
+  width: 100%;
   height: 400px;
+  border-radius: 15px;
+  box-shadow: 2px 2px 10px rgba(0, 0, 0, 0.3);
 }
 .fotoHome:hover {
   transform: scale(1.05);
